--- a/app/src/main/res/layout/game_screen.xml
+++ b/app/src/main/res/layout/game_screen.xml
@@ -16,7 +16,7 @@
         android:gravity="center"
         android:maxLines="20"
         android:scrollbars="vertical"
-        android:text="@string/placeholder_txt2"
+        android:text="@string/placeholder_txt"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
