Ver 0.0.9 -- Finshed designing UI, implemented collectible logic, fixed database related bugs

--- a/app/src/main/res/layout/collectible_screen.xml
+++ b/app/src/main/res/layout/collectible_screen.xml
@@ -5,16 +5,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/treasure_bg"
+        android:scaleType="center"
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/collect_rv"
+        android:layout_width="match_parent"
+        android:layout_height="600dp"
+        tools:itemCount="10"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.809"
+        tools:listitem="@layout/card_view_design" />
+
     <TextView
         android:id="@+id/collectible_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="This is the Collectible Screen!"
-        android:textSize="48sp"
+        android:text="COLLECTIBLES"
+        android:fontFamily="cursive"
+        android:textColor="@color/white"
+        android:textSize="56sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.041" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
