--- a/app/src/main/res/layout/card_view_design.xml
+++ b/app/src/main/res/layout/card_view_design.xml
@@ -3,8 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
+    android:layout_height="120dp"
     android:layout_margin="10dp"
+    android:backgroundTint="@color/story_bg_color"
     app:cardElevation="40dp">
 
     <RelativeLayout
@@ -13,31 +14,16 @@
         android:orientation="horizontal"
         android:padding="0dp">
 
-        <ImageView
-            android:layout_width="387dp"
-            android:layout_height="85dp"
+        <TextView
+            android:id="@+id/collect_desc"
+            android:layout_width="368dp"
+            android:layout_height="60dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp"
-            android:scaleType="centerCrop"
-            android:scaleX="300"
-            android:scaleY="75"
-            android:src="@drawable/scroll_bg" />
-
-        <TextView
-            android:id="@+id/collect_desc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
             android:layout_marginStart="10dp"
             android:layout_marginTop="50dp"
+            android:layout_marginEnd="14dp"
             android:text="Finish the entire story."
             android:textColor="@color/white"
             android:textSize="18sp"
@@ -45,13 +31,14 @@
 
         <TextView
             android:id="@+id/collect_name"
-            android:layout_width="wrap_content"
+            android:layout_width="367dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
             android:layout_marginStart="10dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="15dp"
             android:text="Completionist"
             android:textColor="@color/white"
             android:textSize="28sp"
