--- a/app/src/main/res/layout/collectible_screen.xml
+++ b/app/src/main/res/layout/collectible_screen.xml
@@ -30,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="COLLECTIBLES"
+        android:text="ACHIEVEMENTS"
         android:fontFamily="cursive"
         android:textColor="@color/white"
         android:textSize="56sp"
