Ver 0.0.9 -- Finshed designing UI, implemented collectible logic, fixed database related bugs

--- a/app/src/main/res/layout/credits_screen.xml
+++ b/app/src/main/res/layout/credits_screen.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="cursive"
         android:gravity="center"
-        android:text="The Devs"
+        android:text="Team OSO"
         android:textColor="@color/white"
         android:textSize="62sp"
         android:textStyle="bold"
